# orion-genai-data-pipeline

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.geracao  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: python-app.yml
docker/: entrypoint.sh
pdfs/: README.md  manifest.yaml
scripts/: coleta.sh  download-pdfs.sh  migrate.sh  run-corpus-pdf.sh  run-docker-pipeline.sh  test-api.sh  test-docker.sh  verify-docker-prereqs.sh  verify-ouro.sh
scripts/migrations/: 001_initial.sql
sites/: manifest.yaml
src/: main.py
src/api/: __init__.py  app.py  catalog.py  config.py  health_checks.py  schemas.py
src/api/guards/: __init__.py  corpus_guard.py  site_guard.py
src/api/jobs/: __init__.py  store.py  worker.py
src/api/routes/: __init__.py  health.py  jobs.py  pdf.py  site.py
src/geracao/: README.md  __init__.py  cli.py  client.py  config.py  orchestrator.py
src/pipeline/bronze/: __init__.py  uploader.py
src/pipeline/ingestion/: __init__.py  cli.py  corpus.py  corpus_download.py  local_reader.py  pdf_reader.py  persistence.py  pipeline.py  scraper.py
src/pipeline/shared/: tesseract_env.py
src/pipeline/shared/config/: __init__.py  settings.py
src/pipeline/shared/logger/: __init__.py  logger.py
src/pipeline/shared/schemas/: __init__.py  batch_ingestion_result.py  chunk_embedding.py  extracted_pdf.py  ingestion_result.py  local_document.py  pdf_document.py  processed_document.py  scraped_page.py  text_chunk.py  trace_result.py  transform_result.py
src/pipeline/storage/: postgres.py  qdrant_store.py
src/pipeline/transform/: bronze_reader.py  chunker.py  cleaner.py  cli.py  embedder.py  pdf_extractor.py  pdf_layout.py  pdf_ocr.py  pdf_post_clean.py  pdf_router.py  pipeline.py
tests/: conftest.py
tests/api/: test_catalog.py  test_corpus_guard.py  test_health_route.py  test_job_store.py  test_job_worker.py  test_jobs_route.py  test_pdf_route.py  test_site_guard.py  test_site_route.py
tests/bronze/: test_uploader.py
tests/fixtures/: pdf-manifest.yaml  pdf_fixtures.py  sample-bronze.md  sample-prompt.txt  sample.html
tests/geracao/: test_client.py  test_orchestrator.py
tests/ingestion/: test_cli.py  test_cli_corpus_status.py  test_cli_ingest_dir.py  test_corpus.py  test_corpus_download.py  test_ingest_pdf_bronze.py  test_local_persistence.py  test_local_pipeline.py  test_local_reader.py  test_pdf_persistence.py  test_pdf_pipeline.py  test_pdf_reader.py  test_persistence.py  test_pipeline.py  test_scraper.py
tests/shared/: test_settings_pdf.py  test_settings_tesseract.py
tests/storage/: test_postgres.py  test_qdrant_store.py
tests/transform/: conftest.py  pdf_fixtures.py  test_bronze_reader.py  test_chunker.py  test_cleaner.py  test_embedder.py  test_pdf_extractor.py  test_pdf_layout.py  test_pdf_ocr.py  test_pdf_post_clean.py  test_pdf_router.py  test_transform_cli.py  test_transform_pdf.py  test_transform_pipeline.py  test_transform_pipeline_batch.py  test_transform_pipeline_pdf.py
