[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orion-genai-data-pipeline"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "minio>=7.2.20",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "structlog>=25.5.0",
]

[project.scripts]
orion-ingest = "pipeline.ingestion.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = false
