[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orion-genai-data-pipeline"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "html2text>=2024.2.26",
    "lxml>=6.1.1",
    "minio>=7.2.20",
    "psycopg[binary]>=3.2.0",
    "pymupdf>=1.25.0",
    "pdfplumber>=0.11.0",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.13.0",
    "requests>=2.34.2",
    "sentence-transformers>=3.4.0",
    "structlog>=25.5.0",
    "torch>=2.6.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
orion-ingest = "pipeline.ingestion.cli:main"
orion-transform = "pipeline.transform.cli:main"
orion-geracao = "geracao.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline", "src/api", "src/geracao"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "httpx>=0.28.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.0",
    "ruff>=0.15.0",
]
ocr = [
    "pytesseract>=0.3.13",
    "Pillow>=11.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests/fixtures"]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["prompts", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = false
